<resources>
    <string name="app_name">CimMission</string>
    <string name="action_settings">Settings</string>

    <string name="action_login">Masuk</string>
    <string name="action_register">Daftar</string>
    <string name="action_register_umkm">DAFTAR sebagai UMKM</string>
    <string name="action_register_investor">DAFTAR sebagai INVESTOR</string>
    <string name="action_register_as">Daftar sebagai</string>
    <string name="action_not_have">Belum punya akun ? Daftar di sini</string>
    <string name="action_search">Cari</string>
    <string name="action_search_pengusaha">Cari Pengusaha</string>
    <string name="action_logout">Keluar</string>
    <string name="action_or">Atau</string>

    <string name="name">Nama</string>
    <string name="company_name">Nama UMKM</string>
    <string name="address">Alamat</string>
    <string name="phone">Telepon</string>
    <string name="email">Email</string>
    <string name="username">Nama Pengguna</string>
    <string name="password">Kata Sandi</string>
    <string name="re_password">Re-type password</string>

    <string name="profile">Profil</string>
    <string name="document">Dokumen Usaha</string>

    <string name="umkm">UMKM</string>
    <string name="pengusaha">Pengusaha</string>

    <string name="investor">Investor</string>
    <string name="calon_investor">Calon Investor</string>

    <string name="title_activity_main">Masuk</string>
    <string name="title_activity_register">Daftar</string>
    <string name="title_activity_register_umkm">Daftar UMKM</string>
    <string name="title_activity_register_investor">Daftar Investor</string>
    <string name="title_activity_awal_umkm">Data Usaha</string>
    <string name="title_activity_investor_umkm">Investor</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_company">SDRC Studio</string>
    <string name="navigation_drawer_address">Jl. Mahar Martanegara No.48</string>

    <string name="item_nav_data">Data Usaha</string>
    <string name="item_nav_investor">Investor</string>

    <string name="lorem">Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet </string>

    <string name="profile_short_desc">Deskripsi Singkat Usaha</string>
    <string name="profile_detail_usaha">Detail Usaha</string>
    <string name="profile_kontak">Kontak Usaha</string>
    <string name="profile_jenis_usaha">Jenis Usaha</string>
    <string name="profile_bidang_usaha">Bidang Usaha</string>
    <string name="profile_pemilik_usaha">Pemilik</string>
    <string name="profile_email_usaha">Email</string>
    <string name="profile_telepon_usaha">Telepon</string>
    <string name="profile_website_usaha">Website</string>
</resources>
