<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_short_desc"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textAllCaps="true"
        android:fontFamily="sans-serif-medium"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lorem"
        android:textSize="16sp"
        android:fontFamily="sans-serif-light"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_detail_usaha"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textAllCaps="true"
        android:fontFamily="sans-serif-medium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/profile_jenis_usaha"
            android:textSize="16sp"
            android:fontFamily="sans-serif-light"
            android:layout_weight="1"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/profile_jenis_usaha"
            android:textSize="16sp"
            android:fontFamily="sans-serif-light"
            android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/profile_jenis_usaha"
            android:textSize="16sp"
            android:fontFamily="sans-serif-light"
            android:layout_weight="1"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/profile_jenis_usaha"
            android:textSize="16sp"
            android:fontFamily="sans-serif-light"
            android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/profile_jenis_usaha"
            android:textSize="16sp"
            android:fontFamily="sans-serif-light"
            android:layout_weight="1"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/profile_jenis_usaha"
            android:textSize="16sp"
            android:fontFamily="sans-serif-light"
            android:layout_weight="2"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_kontak"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textAllCaps="true"
        android:fontFamily="sans-serif-medium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/profile_jenis_usaha"
            android:textSize="16sp"
            android:fontFamily="sans-serif-light"
            android:layout_weight="1"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/profile_jenis_usaha"
            android:textSize="16sp"
            android:fontFamily="sans-serif-light"
            android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/profile_jenis_usaha"
            android:textSize="16sp"
            android:fontFamily="sans-serif-light"
            android:layout_weight="1"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/profile_jenis_usaha"
            android:textSize="16sp"
            android:fontFamily="sans-serif-light"
            android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/profile_jenis_usaha"
            android:textSize="16sp"
            android:fontFamily="sans-serif-light"
            android:layout_weight="1"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/profile_jenis_usaha"
            android:textSize="16sp"
            android:fontFamily="sans-serif-light"
            android:layout_weight="2"/>
    </LinearLayout>

</LinearLayout>